Created basic function to make the input form responsive

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/1d75e38b03.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
     <title>Job Finder</title>
   </head>
   <body>
@@ -18,7 +19,7 @@
           placeholder="Insert a location.."
           id="location-search-bar"
         />
-        <input type="submit" value="Search" />
+        <input type="submit" value="Search" onclick="jobSearch()" />
       </form>
     </div>
   </body>
