added second condition for the location in the object array

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <input type="submit" value="Search" onclick="jobSearch()" />
       </form>
     </div>
+    <div><p id="results"></p></div>
   </body>
 </html>
