Re-started working on the filter on js for the jobs array

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           placeholder="Insert a location.."
           id="location-search-bar"
         />
-        <input type="submit" value="Search" onclick="jobSearch()" />
+        <input type="submit" value="Search" />
       </form>
     </div>
     <div><p id="results"></p></div>
