--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/1d75e38b03.js"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js"></script>
+
     <link rel="stylesheet" href="index.css" />
     <title>Job Finder</title>
   </head>
@@ -30,10 +30,12 @@
           placeholder="Insert a location.."
           id="location-search-bar"
         />
-        <input type="submit" value="Search" onclick="jobSearch()" />
-        <input type="button" value="Clean Search" />
+        <input type="submit" value="Search" />
+        <input type="button" value="Clean Search" id="clean-search" />
       </form>
     </div>
     <div><p id="results"></p></div>
+
+    <script src="index.js"></script>
   </body>
 </html>
