worked on the top bar on HTML and CSS

--- a/index.html
+++ b/index.html
@@ -9,32 +9,39 @@
     ></script>
 
     <link rel="stylesheet" href="index.css" />
-    <title>Job Finder</title>
+    <title>Job4You- JobFinder</title>
   </head>
+
   <body>
-    <div id="top-bar">
-      <h3>Jobs4You</h3>
-      <div id="side-icons">
-        <p>About us</p>
-        <p>Create account</p>
-        <p>Log in</p>
-        <i class="fa-solid fa-circle-user"></i>
+    <div id="container">
+      <nav id="top-bar">
+        <img src="images/job4you.png" alt="website-logo" />
+        <div id="side-elements">
+          <ul>
+            <li>About us</li>
+            <li>Create Account</li>
+            <li>Log in</li>
+            <li><i class="fa-solid fa-circle-user"></i></li>
+          </ul>
+        </div>
+      </nav>
+
+      <div id="main">
+        <h1>Start searching for your next career now!</h1>
+        <form id="search-form">
+          <input type="search" placeholder="Find a job.." id="job-search-bar" />
+          <input
+            type="search"
+            placeholder="Insert a location.."
+            id="location-search-bar"
+          />
+          <input type="submit" value="Search" />
+          <input type="button" value="Clean Search" id="clean-search" />
+        </form>
       </div>
+
+      <div><p id="results"></p></div>
     </div>
-    <div>
-      <h1>Start searching for your next career now!</h1>
-      <form id="search-form">
-        <input type="search" placeholder="Find a job.." id="job-search-bar" />
-        <input
-          type="search"
-          placeholder="Insert a location.."
-          id="location-search-bar"
-        />
-        <input type="submit" value="Search" />
-        <input type="button" value="Clean Search" id="clean-search" />
-      </form>
-    </div>
-    <div><p id="results"></p></div>
 
     <script src="index.js"></script>
   </body>
