--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/1d75e38b03.js"
       crossorigin="anonymous"
@@ -15,7 +23,7 @@
   <body>
     <div id="container">
       <nav id="top-bar">
-        <img src="images/job4you.png" alt="website-logo" />
+        <h4>Jobs4You.com</h4>
         <div id="side-elements">
           <ul>
             <li>About us</li>
